[workspace.package]
authors = ["Jason de Wolff <jason.dewolff@temporalinteractive.com>"]
edition = "2021"
homepage = "https://github.com/TemporalInteractive/digital-elevation-model"
keywords = ["games", "3d", "models"]
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/TemporalInteractive/digital-elevation-model"
version = "0.0.1"
readme = "README.md"
description = "Digital elevation models of planets in a high performance format."

[workspace.dependencies]
digital-elevation-model = { version = "0.0.1", path = "digital-elevation-model" }

anyhow = { version = "1.0.95" }
glam = { version = "0.30.1" }
half = { version = "2.5.0" }
image = { version = "0.25.6" }
speedy = { version = "0.8.7" }

[workspace]
members = [
    "dem-bakery",
    "digital-elevation-model",
]
resolver = "2"